--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,7 +1,7 @@
 version: '1.0'
 steps:
   my_step:
-    type: composition
+    type: launch-composition
     composition:
       version: '2'
       services:
