--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,7 +4,7 @@ steps:
     title: launching composition
     type: launch-composition
     composition:
-      version: '3'
+      version: '3
       services:
         app:
           image: 'codefreshdemo/demochat:master'
