--- a/codefresh.yml
+++ b/codefresh.yml
@@ -4,9 +4,10 @@ steps:
     title: launching composition
     type: launch-composition
     composition:
-      version: '3
+      version: '3'
       services:
         app:
+          ima: st
           image: 'codefreshdemo/demochat:master'
           links:
             - mongo
