--- a/codefresh.yml
+++ b/codefresh.yml
@@ -1,17 +1,12 @@
 version: '1.0'
 steps:
-  launch-composition:
-    title: launching composition
-    type: launch-composition
-    composition:
-      version: '3'
-      services:
-        app:
-          ima: st
-          image: 'codefreshdemo/demochat:master'
-          links:
-            - mongo
-          ports:
-            - 5000
-        mongo:
-          image: mongo
+  run:
+    title: checking match condition...
+    image: ubuntu
+    command: env
+    when: 
+      condition: 
+        all: 
+          betaBranch: 'includes(lower("beta"), "beta") == true' 
+          isTag: 'match("v1.0.0-beta.1", "^v([0-9]\.){2}[0-9](-beta\.[0-9]{1,3})?$", true) == true' 
+
